[gd_scene load_steps=2 format=3 uid="uid://cf34egmcfqa1x"]

[ext_resource type="Script" path="res://menu.gd" id="1_k8pdx"]

[node name="menu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_k8pdx")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 2
offset_left = 489.0
offset_top = 227.0
offset_right = 661.0
offset_bottom = 311.0

[node name="play" type="Button" parent="VBoxContainer"]
layout_mode = 2
text = "играть"

[node name="hints" type="Button" parent="VBoxContainer"]
layout_mode = 2
text = "советы"

[node name="settings" type="Button" parent="VBoxContainer"]
layout_mode = 2
text = "настройки"

[node name="RichTextLabel" type="RichTextLabel" parent="."]
layout_mode = 0
offset_left = 512.0
offset_top = 123.0
offset_right = 569.0
offset_bottom = 149.0
scale = Vector2(2.53, 2.53)
text = "Shark"

[node name="Records" type="RichTextLabel" parent="."]
layout_mode = 0
offset_left = 519.0
offset_top = 573.0
offset_right = 754.0
offset_bottom = 613.0
text = "Ваш рекорд: 0"

[connection signal="pressed" from="VBoxContainer/play" to="." method="_on_play_pressed"]
[connection signal="pressed" from="VBoxContainer/hints" to="." method="_on_hints_pressed"]
[connection signal="pressed" from="VBoxContainer/settings" to="." method="_on_settings_pressed"]
